[package]
name = "nees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.8.0"
byteorder = "1.4.3"
glow = "0.14.0"

[dependencies.windows]
    version = "0.58.0"
    features = [
        "Win32_Media_Audio", 
        "Win32_UI_WindowsAndMessaging", 
        "Win32_Graphics_Gdi", 
        "Win32_System_LibraryLoader",
        "Win32_Graphics_OpenGL"
    ]
